# voronoi-sdl2

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: common.h  defs.h  draw.c  draw.h  grid.c  grid.h  init.c  input.c  input.h  main.c  seed.c  seed.h  util.c  util.h  voronoi.c  voronoi.h
